# aiautocommit

./: .copier-answers.yml  .envrc  .gitignore  .tool-versions  CHANGELOG.md  Justfile  README.md  TODO  mise.ci.toml  pyproject.toml
.github/workflows/: build_and_publish.yml
aiautocommit/: __init__.py  difftastic.py  internet.py  log.py  prepare-commit-msg  utils.py
aiautocommit/prompt/: commit_prompt.txt  excluded_files.txt
aiautocommit/prompt/examples/: example_1.md  example_2.md  example_3.md
autocommit/: __init__.py  pre-commit  prepare-commit-msg
tests/: conftest.py  test_ai_key.py  test_cli.py  test_coverage_expansion.py  test_difftastic.py  test_difftastic_integration.py  test_gemini_config.py  test_import.py  test_integration.py  test_internet.py  test_utils.py  test_version_unknown.py  utils.py
tests/evals/: apply_formatting.txt  fix_not_refactor.txt  more_than_refactor.txt  not_refactor.txt  probably_a_fix.txt
