[project]
name = "aiautocommit"
version = "0.14.0"
description = "AI generated commit messages"
keywords = ["git", "commit", "automation", "ai", "openai", "gemini", "anthropic"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "structlog-config>=0.6.0",
    "backoff>=2.2.1",
    "click>=8.1.7",
    "pydantic-ai-slim[openai,anthropic,vertexai,google]>=0.0.18",
]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/aiautocommit" }

[project.optional-dependencies]
all-providers = [
    "pydantic-ai>=0.0.18",
]

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
aiautocommit = "aiautocommit:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pyright[nodejs]>=1.1.380",
    "ruff>=0.8.0",
    "pudb>=2024.1.3",
    "beautiful-traceback>=0.5.0",
    "coverage>=7.13.3",
    "pytest-cov>=7.0.0",
    "covdefaults>=2.3.0",
]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["aiautocommit"]

[tool.coverage.report]
fail_under = 50

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]
